--- a/Resources/Main.storyboard
+++ b/Resources/Main.storyboard
@@ -39,14 +39,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="9zX-2P-e3B">
-                                                    <rect key="frame" x="15" y="5" width="34" height="21"/>
+                                                    <rect key="frame" x="15" y="4" width="37" height="22"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="18"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0fH-Rh-GoA">
-                                                    <rect key="frame" x="15" y="26" width="41" height="14"/>
+                                                    <rect key="frame" x="15" y="26" width="43" height="14.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="12"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -69,7 +69,7 @@
                                         <state key="normal" image="ipodplay">
                                             <color key="titleColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
-                                        <state key="selected" image="ipodpause.png"/>
+                                        <state key="selected" image="ipodpause"/>
                                         <connections>
                                             <action selector="ipodPlayPause" destination="Fwb-c8-22I" eventType="touchUpInside" id="Rv5-CM-ymu"/>
                                         </connections>
@@ -116,7 +116,7 @@
                                         <state key="normal" image="shuffle">
                                             <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
-                                        <state key="selected" image="shuffle_selected.png"/>
+                                        <state key="selected" image="shuffle_selected"/>
                                         <connections>
                                             <action selector="ipodShuffle" destination="Fwb-c8-22I" eventType="touchUpInside" id="XTm-gr-KGA"/>
                                         </connections>
@@ -416,13 +416,13 @@
     </scenes>
     <resources>
         <image name="ipodnext" width="32" height="25"/>
-        <image name="ipodpause.png" width="30" height="30"/>
+        <image name="ipodpause" width="30" height="30"/>
         <image name="ipodplay" width="30" height="30"/>
         <image name="ipodprevious" width="32" height="25"/>
         <image name="load_playlist" width="18" height="18"/>
         <image name="settings" width="16" height="16"/>
         <image name="shuffle" width="28" height="18"/>
-        <image name="shuffle_selected.png" width="28" height="18"/>
+        <image name="shuffle_selected" width="28" height="18"/>
         <image name="waveload" width="280" height="75"/>
     </resources>
 </document>
